# bench_hpc

./: avx2_aligned.cpp  avx2_str.cpp  bench_cublaslt  bench_cublaslt.cu  gemm_bf16_tf32.cu  sum_avx2_vs_omp
.ccls-cache/@@home@bokutotu@hoge/: @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@__stddef_max_align_t.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@__wmmintrin_aes.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@__wmmintrin_pclmul.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@adxintrin.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@amxintrin.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@avx2intrin.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@avx512bf16intrin.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@avx512bitalgintrin.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@avx512bwintrin.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@avx512cdintrin.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@avx512dqintrin.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@avx512erintrin.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@avx512fintrin.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@avx512ifmaintrin.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@avx512ifmavlintrin.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@avx512pfintrin.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@avx512vbmi2intrin.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@avx512vbmiintrin.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@avx512vbmivlintrin.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@avx512vlbf16intrin.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@avx512vlbitalgintrin.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@avx512vlbwintrin.h.blob  @home@bokutotu@.local@share@nvim@lsp_servers@ccls@clang-resource@include@avx512vlcdintrin.h.blob  (+267 more)
axpy_bench/: CMakeLists.txt  main.cpp
stride_opt_test/: CMakeLists.txt  bench.cpp
stride_opt_test/b/: CMakeCache.txt
(+2 files in other folders)
